--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -2,7 +2,7 @@
 <footer class="footer moss-bg">
   <div class="container">
     <p>Для швидкого обміну інформацією, фото та відео між нашими гостями ми створили групу в Telegram</p>
-    <a href="#" class="telegram-btn">Приєднатися</a>
+    <a href="https://t.me/+AkpvQr6Z0TUwOTRi" class="telegram-btn">Приєднатися</a>
     <div class="credits">made with ♥</div>
   </div>
 </footer>
