--- a/src/app/components/color-palette/color-palette.html
+++ b/src/app/components/color-palette/color-palette.html
@@ -12,7 +12,7 @@
           <div class="color-sample" [style.background]="color.code"></div>
           <div class="color-info">
             <span class="color-name">{{ color.name }}</span>
-            <span class="color-code">{{ color.code }}</span>
+            <span class="color-code"></span>
           </div>
         </div>
       }
