--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -9,7 +9,7 @@
   position: relative;
   overflow: hidden;
   height: 100vh;
-  background-image: url("../../../../public/couple-bg.jpg");
+  background-image: url("../../../../public/couple-main.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
