fix guest name display

--- a/src/app/components/main-invitation/main-invitation.html
+++ b/src/app/components/main-invitation/main-invitation.html
@@ -6,7 +6,10 @@
       <div class="floral-decor bottom-right">🌿</div>
 
       <h2 class="invitation__greeting">
-        <span class="handwriting">{{ guestName.includes(',') ? 'Дорогі' : 'Дорога' }}</span>
+        <span class="handwriting">  {{
+            guestName.includes(',') ? 'Дорогі' :
+              (guestName === 'Коля' || guestName === 'Дядько Влад') ? 'Дорогий' : 'Дорога'
+          }}</span>
         <span class="guest-name">{{ guestName }}</span>
         <span class="exclamation">!</span>
       </h2>
