add new guest and remove remind visit time

--- a/src/app/components/drink-preferences/drink-preferences.html
+++ b/src/app/components/drink-preferences/drink-preferences.html
@@ -77,9 +77,9 @@
       </form>
     </div>
 
-    <p class="remind-visit">
-      <span class="remind-icon">⏳</span>
-      Прохання повідомити про вашу присутність до 10 липня 2025 року
-    </p>
+<!--    <p class="remind-visit">-->
+<!--      <span class="remind-icon">⏳</span>-->
+<!--      Прохання повідомити про вашу присутність до 10 липня 2025 року-->
+<!--    </p>-->
   </div>
 </section>
